fix Legible text

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -444,7 +444,7 @@ a:hover {
 
 #main-container-signup {
     width: 100%;
-    height: 600px;
+    height: 800px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -1144,7 +1144,7 @@ input[type="submit"] {
     }
 
     #menu {
-        font-size: 10px;
+        font-size: 12px;
     }
 
      /* First container*/
@@ -1243,7 +1243,7 @@ input[type="submit"] {
     }
     /* Footer */
     .copyright {
-        font-size: 11px;
+        font-size: 12px;
        
     }
       /* about.html */
@@ -1384,7 +1384,7 @@ input[type="submit"] {
         font-size: 1rem;
        }
        input, label, textarea{
-        font-size: 0.6rem;
+        font-size: 0.8rem;
        }
 
        #box-container-form{
